--- a/privacy.html
+++ b/privacy.html
@@ -108,15 +108,15 @@
                 <span class="text-2xl font-bold text-dark font-display">ClearMic</span>
             </div>
             <div class="hidden md:flex items-center space-x-10">
-                <a href="index-en-v0.3.html#technology" class="text-gray-700 hover:text-primary font-medium transition-smooth relative group">
+                <a href="index.html#technology" class="text-gray-700 hover:text-primary font-medium transition-smooth relative group">
                     Product Highlights
                     <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-primary transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="index-en-v0.3.html#testimonials" class="text-gray-700 hover:text-primary font-medium transition-smooth relative group">
+                <a href="index.html#testimonials" class="text-gray-700 hover:text-primary font-medium transition-smooth relative group">
                     Testimonials
                     <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-primary transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="index-en-v0.3.html#pricing" class="text-gray-700 hover:text-primary font-medium transition-smooth relative group">
+                <a href="index.html#pricing" class="text-gray-700 hover:text-primary font-medium transition-smooth relative group">
                     Pricing
                     <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-primary transition-all duration-300 group-hover:w-full"></span>
                 </a>
@@ -140,13 +140,13 @@
                     Help
                     <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-primary transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="index-en-v0.3.html#contact" class="text-gray-700 hover:text-primary font-medium transition-smooth relative group">
+                <a href="index.html#contact" class="text-gray-700 hover:text-primary font-medium transition-smooth relative group">
                     Contact Us
                     <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-primary transition-all duration-300 group-hover:w-full"></span>
                 </a>
             </div>
             <div class="flex items-center space-x-5">
-                <a href="index-en-v0.3.html#download" class="hidden md:block px-6 py-3 bg-gradient-to-r from-primary to-accent text-white rounded-xl hover:shadow-medium transition-smooth font-medium">
+                <a href="index.html#download" class="hidden md:block px-6 py-3 bg-gradient-to-r from-primary to-accent text-white rounded-xl hover:shadow-medium transition-smooth font-medium">
                     Download Now
                 </a>
                 <button class="md:hidden text-gray-700 hover:text-primary transition-smooth focus:outline-none" id="mobile-menu-button">
@@ -157,16 +157,16 @@
         <!-- Mobile Menu -->
         <div class="md:hidden hidden bg-white shadow-medium absolute w-full left-0 top-full" id="mobile-menu">
                 <div class="container mx-auto px-4 py-4 flex flex-col space-y-4">
-                    <a href="index-en-v0.3.html#technology" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Product Highlights</a>
-                    <a href="index-en-v0.3.html#testimonials" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Testimonials</a>
-                    <a href="index-en-v0.3.html#pricing" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Pricing</a>
+                    <a href="index.html#technology" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Product Highlights</a>
+                    <a href="index.html#testimonials" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Testimonials</a>
+                    <a href="index.html#pricing" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Pricing</a>
                     <a href="faq.html" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">FAQ</a>
                     <a href="tutorials.html" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Tutorials</a>
                     <a href="privacy.html" class="text-primary py-2 font-medium transition-smooth">Privacy</a>
                     <a href="terms.html" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Terms</a>
                     <a href="help.html" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Help</a>
-                    <a href="index-en-v0.3.html#contact" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Contact Us</a>
-                    <a href="index-en-v0.3.html#download" class="text-center px-6 py-3 bg-gradient-to-r from-primary to-accent text-white rounded-xl font-medium">
+                    <a href="index.html#contact" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Contact Us</a>
+                    <a href="index.html#download" class="text-center px-6 py-3 bg-gradient-to-r from-primary to-accent text-white rounded-xl font-medium">
                         Download Now
                     </a>
                 </div>
