Updated website color scheme & icons; fixed bugs in payment and privacy interfaces.

--- a/faq.html
+++ b/faq.html
@@ -11,9 +11,9 @@
             theme: {
                 extend: {
                     colors: {
-                        primary: '#4338CA',
+                        primary: '#059669',
                         secondary: '#059669',
-                        accent: '#6366F1',
+                        accent: '#10B981',
                         dark: '#111827',
                         light: '#F9FAFB',
                         'gray-50': '#F9FAFB',
@@ -108,15 +108,15 @@
                 <span class="text-2xl font-bold text-dark font-display">ClearMic</span>
             </div>
             <div class="hidden md:flex items-center space-x-10">
-                <a href="index-en-v0.3.html#technology" class="text-gray-700 hover:text-primary font-medium transition-smooth relative group">
+                <a href="index.html#technology" class="text-gray-700 hover:text-primary font-medium transition-smooth relative group">
                     Product Highlights
                     <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-primary transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="index-en-v0.3.html#testimonials" class="text-gray-700 hover:text-primary font-medium transition-smooth relative group">
+                <a href="index.html#testimonials" class="text-gray-700 hover:text-primary font-medium transition-smooth relative group">
                     Testimonials
                     <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-primary transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="index-en-v0.3.html#pricing" class="text-gray-700 hover:text-primary font-medium transition-smooth relative group">
+                <a href="index.html#pricing" class="text-gray-700 hover:text-primary font-medium transition-smooth relative group">
                     Pricing
                     <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-primary transition-all duration-300 group-hover:w-full"></span>
                 </a>
@@ -132,21 +132,17 @@
                     Privacy
                     <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-primary transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="terms.html" class="text-gray-700 hover:text-primary font-medium transition-smooth relative group">
-                    Terms
-                    <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-primary transition-all duration-300 group-hover:w-full"></span>
-                </a>
                 <a href="help.html" class="text-gray-700 hover:text-primary font-medium transition-smooth relative group">
                     Help
                     <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-primary transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="index-en-v0.3.html#contact" class="text-gray-700 hover:text-primary font-medium transition-smooth relative group">
+                <a href="index.html#contact" class="text-gray-700 hover:text-primary font-medium transition-smooth relative group">
                     Contact Us
                     <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-primary transition-all duration-300 group-hover:w-full"></span>
                 </a>
             </div>
             <div class="flex items-center space-x-5">
-                <a href="index-en-v0.3.html#download" class="hidden md:block px-6 py-3 bg-gradient-to-r from-primary to-accent text-white rounded-xl hover:shadow-medium transition-smooth font-medium">
+                <a href="index.html#download" class="hidden md:block px-6 py-3 bg-gradient-to-r from-primary to-accent text-white rounded-xl hover:shadow-medium transition-smooth font-medium">
                     Download Now
                 </a>
                 <button class="md:hidden text-gray-700 hover:text-primary transition-smooth focus:outline-none" id="mobile-menu-button">
@@ -157,16 +153,15 @@
         <!-- Mobile Menu -->
         <div class="md:hidden hidden bg-white shadow-medium absolute w-full left-0 top-full" id="mobile-menu">
                 <div class="container mx-auto px-4 py-4 flex flex-col space-y-4">
-                    <a href="index-en-v0.3.html#technology" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Product Highlights</a>
-                    <a href="index-en-v0.3.html#testimonials" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Testimonials</a>
-                    <a href="index-en-v0.3.html#pricing" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Pricing</a>
+                    <a href="index.html#technology" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Product Highlights</a>
+                    <a href="index.html#testimonials" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Testimonials</a>
+                    <a href="index.html#pricing" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Pricing</a>
                     <a href="faq.html" class="text-primary py-2 font-medium transition-smooth">FAQ</a>
                     <a href="tutorials.html" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Tutorials</a>
                     <a href="privacy.html" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Privacy</a>
-                    <a href="terms.html" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Terms</a>
                     <a href="help.html" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Help</a>
-                    <a href="index-en-v0.3.html#contact" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Contact Us</a>
-                    <a href="index-en-v0.3.html#download" class="text-center px-6 py-3 bg-gradient-to-r from-primary to-accent text-white rounded-xl font-medium">
+                    <a href="index.html#contact" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Contact Us</a>
+                    <a href="index.html#download" class="text-center px-6 py-3 bg-gradient-to-r from-primary to-accent text-white rounded-xl font-medium">
                         Download Now
                     </a>
                 </div>
@@ -225,7 +220,7 @@
                         <li>Install and launch ClearMic on your Windows computer.</li>
                         <li>In the ClearMic interface, select your physical microphone as the input device.</li>
                         <li>Enable the noise reduction or other audio processing features you need.</li>
-                        <li>In your meeting or recording software (e.g., Zoom, Teams, OBS), select "ClearMic Virtual Microphone" as the input device.</li>
+                        <li>In your meeting or recording software (e.g., Zoom, Teams, OBS), select "Streamlit Virtual Microphone" as the input device.</li>
                         <li>Start your call or recording, and ClearMic will automatically process your audio in real-time.</li>
                     </ol>
                 </div>
@@ -270,7 +265,7 @@
                 <div class="bg-white rounded-2xl p-6 md:p-8 hover-lift shadow-soft border border-gray-100">
                     <h3 class="text-lg md:text-xl font-semibold mb-3 md:mb-4 font-display">Can I use ClearMic with any application?</h3>
                     <p class="text-gray-600 leading-relaxed">
-                        Yes, ClearMic works with most applications that use a microphone, including video conferencing software (Zoom, Microsoft Teams, Google Meet), voice recording software, streaming applications, and more. Simply select "ClearMic Virtual Microphone" as the input device in your application's audio settings.
+                        Yes, ClearMic works with most applications that use a microphone, including video conferencing software (Zoom, Microsoft Teams, Google Meet), voice recording software, streaming applications, and more. Simply select "Streamlit Virtual Microphone" as the input device in your application's audio settings.
                     </p>
                 </div>
                 
@@ -327,22 +322,22 @@
                     <h4 class="text-lg font-semibold mb-6">Quick Links</h4>
                     <ul class="space-y-4">
                         <li>
-                            <a href="index-en-v0.3.html#about" class="text-gray-400 hover:text-white transition-smooth">About Us</a>
+                            <a href="index.html#about" class="text-gray-400 hover:text-white transition-smooth">About Us</a>
                         </li>
                         <li>
-                            <a href="index-en-v0.3.html#technology" class="text-gray-400 hover:text-white transition-smooth">Product Highlights</a>
+                            <a href="index.html#technology" class="text-gray-400 hover:text-white transition-smooth">Product Highlights</a>
                         </li>
                         <li>
-                            <a href="index-en-v0.3.html#testimonials" class="text-gray-400 hover:text-white transition-smooth">Testimonials</a>
+                            <a href="index.html#testimonials" class="text-gray-400 hover:text-white transition-smooth">Testimonials</a>
                         </li>
                         <li>
-                            <a href="index-en-v0.3.html#pricing" class="text-gray-400 hover:text-white transition-smooth">Pricing Plans</a>
+                            <a href="index.html#pricing" class="text-gray-400 hover:text-white transition-smooth">Pricing Plans</a>
                         </li>
                         <li>
-                            <a href="index-en-v0.3.html#contact" class="text-gray-400 hover:text-white transition-smooth">Contact Us</a>
+                            <a href="index.html#contact" class="text-gray-400 hover:text-white transition-smooth">Contact Us</a>
                         </li>
                         <li>
-                            <a href="index-en-v0.3.html#download" class="text-gray-400 hover:text-white transition-smooth">Download Now</a>
+                            <a href="index.html#download" class="text-gray-400 hover:text-white transition-smooth">Download Now</a>
                         </li>
                     </ul>
                 </div>
