--- a/terms.html
+++ b/terms.html
@@ -11,9 +11,9 @@
             theme: {
                 extend: {
                     colors: {
-                        primary: '#4338CA',
+                        primary: '#059669',
                         secondary: '#059669',
-                        accent: '#6366F1',
+                        accent: '#10B981',
                         dark: '#111827',
                         light: '#F9FAFB',
                         'gray-50': '#F9FAFB',
@@ -132,10 +132,6 @@
                     Privacy
                     <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-primary transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="terms.html" class="text-primary font-medium transition-smooth relative group">
-                    Terms
-                    <span class="absolute bottom-0 left-0 w-full h-0.5 bg-primary transition-all duration-300"></span>
-                </a>
                 <a href="help.html" class="text-gray-700 hover:text-primary font-medium transition-smooth relative group">
                     Help
                     <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-primary transition-all duration-300 group-hover:w-full"></span>
@@ -163,7 +159,6 @@
                     <a href="faq.html" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">FAQ</a>
                     <a href="tutorials.html" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Tutorials</a>
                     <a href="privacy.html" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Privacy</a>
-                    <a href="terms.html" class="text-primary py-2 font-medium transition-smooth">Terms</a>
                     <a href="help.html" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Help</a>
                     <a href="index.html#contact" class="text-gray-700 hover:text-primary py-2 font-medium transition-smooth">Contact Us</a>
                     <a href="index.html#download" class="text-center px-6 py-3 bg-gradient-to-r from-primary to-accent text-white rounded-xl font-medium">
