Updated website color scheme & icons; fixed bugs in payment and privacy interfaces.

--- a/faq.html
+++ b/faq.html
@@ -291,7 +291,7 @@
     <!-- Footer -->
     <footer class="bg-dark text-white pt-20 pb-10">
         <div class="container mx-auto px-4">
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12 mb-16">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-10 lg:gap-12 mb-16">
                 <!-- Company Information -->
                 <div>
                     <div class="flex items-center space-x-3 mb-6">
@@ -364,27 +364,7 @@
                     </ul>
                 </div>
                 
-                <!-- Subscribe -->
-                <div>
-                    <h4 class="text-lg font-semibold mb-6">Subscribe to Newsletter</h4>
-                    <p class="text-gray-400 mb-6">
-                        Subscribe to our newsletter to get the latest product updates and offers.
-                    </p>
-                    <form class="space-y-4">
-                        <div>
-                            <input type="email" placeholder="Your email address" class="w-full px-4 py-3 bg-white/10 border border-white/20 rounded-xl focus:outline-none focus:ring-2 focus:ring-white focus:border-transparent transition-smooth text-white placeholder-gray-400" required>
-                        </div>
-                        <div class="flex items-start space-x-3">
-                            <input type="checkbox" id="subscribe-consent" class="mt-1 w-5 h-5 rounded border-white/30 text-white focus:ring-white" required>
-                            <label for="subscribe-consent" class="text-sm text-gray-400">
-                                I agree to ClearMic processing my subscription data according to the <a href="privacy.html" class="text-white hover:underline">Privacy Policy</a>.
-                            </label>
-                        </div>
-                        <button type="submit" class="w-full py-3 bg-white text-primary rounded-xl hover:bg-gray-100 transition-smooth font-medium">
-                            Subscribe
-                        </button>
-                    </form>
-                </div>
+
             </div>
             
             <!-- Copyright Information -->
