--- a/privacy.html
+++ b/privacy.html
@@ -370,7 +370,7 @@
     <!-- Footer -->
     <footer class="bg-dark text-white pt-20 pb-10">
         <div class="container mx-auto px-4">
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12 mb-16">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-10 lg:gap-12 mb-16">
                 <!-- Company Information -->
                 <div>
                     <div class="flex items-center space-x-3 mb-6">
@@ -443,19 +443,7 @@
                     </ul>
                 </div>
                 
-                <!-- Newsletter -->
-                <div>
-                    <h4 class="text-lg font-semibold mb-6">Stay Updated</h4>
-                    <p class="text-gray-400 mb-6">
-                        Subscribe to our newsletter to get the latest updates and news about ClearMic.
-                    </p>
-                    <div class="flex">
-                        <input type="email" placeholder="Your email address" class="flex-1 px-4 py-3 bg-white/10 rounded-l-xl focus:outline-none focus:ring-2 focus:ring-primary text-white">
-                        <button class="px-6 py-3 bg-primary text-white rounded-r-xl hover:bg-primary/90 transition-smooth">
-                            Subscribe
-                        </button>
-                    </div>
-                </div>
+
             </div>
             
             <div class="border-t border-white/10 pt-10">
