--- a/index.html
+++ b/index.html
@@ -723,8 +723,8 @@
                     <p class="text-white/90 mb-8">
                         Download and install ClearMic to enjoy professional audio enhancement experience with noise cancellation, voice transformation, voice beautification, and adaptive volume control, making every communication clearer and more efficient.
                     </p>
-                    <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-4">
-                        <a href="#" class="flex items-center justify-center space-x-3 px-6 py-3 bg-white text-primary rounded-xl hover:bg-gray-100 transition-smooth font-medium">
+                    <div class="flex flex-col items-center justify-center space-y-4">
+                        <a href="#" class="flex items-center justify-center space-x-3 px-8 py-4 bg-white text-primary rounded-xl hover:bg-gray-100 transition-smooth font-medium">
                             <i class="fa fa-windows text-xl"></i>
                             <span>Windows Version</span>
                         </a>
@@ -737,7 +737,7 @@
     <!-- Footer -->
     <footer class="bg-dark text-white pt-20 pb-10">
         <div class="container mx-auto px-4">
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12 mb-16">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-10 lg:gap-12 mb-16">
                 <!-- Company Information -->
                 <div>
                     <div class="flex items-center space-x-3 mb-6">
@@ -808,20 +808,6 @@
                             <a href="help.html" class="text-gray-400 hover:text-white transition-smooth">Help Center</a>
                         </li>
                     </ul>
-                </div>
-                
-                <!-- Newsletter -->
-                <div>
-                    <h4 class="text-lg font-semibold mb-6">Stay Updated</h4>
-                    <p class="text-gray-400 mb-6">
-                        Subscribe to our newsletter to get the latest updates and news about ClearMic.
-                    </p>
-                    <div class="flex">
-                        <input type="email" placeholder="Your email address" class="flex-1 px-4 py-3 bg-white/10 rounded-l-xl focus:outline-none focus:ring-2 focus:ring-primary text-white">
-                        <button class="px-6 py-3 bg-primary text-white rounded-r-xl hover:bg-primary/90 transition-smooth">
-                            Subscribe
-                        </button>
-                    </div>
                 </div>
             </div>
             
